Correction in richness calculation + efficiency

--- a/1.general_framework.ipynb
+++ b/1.general_framework.ipynb
@@ -50,15 +50,15 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "b6b59d62-1939-4a1d-9978-53d870ce2f83",
+   "cell_type": "raw",
+   "id": "099fb604-5450-495e-8e6b-b6ff9eb78ff4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-11-19T14:49:52.699946Z",
-     "iopub.status.busy": "2024-11-19T14:49:52.698421Z",
-     "iopub.status.idle": "2024-11-19T14:49:53.275093Z",
-     "shell.execute_reply": "2024-11-19T14:49:53.274546Z",
-     "shell.execute_reply.started": "2024-11-19T14:49:52.699911Z"
+     "iopub.execute_input": "2024-11-20T23:34:32.438023Z",
+     "iopub.status.busy": "2024-11-20T23:34:32.437367Z",
+     "iopub.status.idle": "2024-11-20T23:34:32.885775Z",
+     "shell.execute_reply": "2024-11-20T23:34:32.885504Z",
+     "shell.execute_reply.started": "2024-11-20T23:34:32.437978Z"
     }
    },
    "source": [
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86a24a57-9c25-4eba-bb4a-9840d6553e8e",
+   "id": "f1e39882-bed2-4c3a-97f9-962a9e7247f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
     "# SEED\n",
     "SEED = 49387\n",
     "\n",
-    "use_cross_validation = True\n",
+    "use_cross_validation = False\n",
     "\n",
     "n_splits=2\n",
     "\n",
@@ -191,7 +191,7 @@
     "        X_test, X_train = X_test_raw, X_train_raw\n",
     "        X_val, X_val_band = None, None\n",
     "    Y_train = Y_train_raw\n",
-    "    del Y_train_raw, X_train_raw, X_test_raw"
+    "#del Y_train_raw, X_train_raw, X_test_raw"
    ]
   },
   {
@@ -359,7 +359,7 @@
     "colors_step1 = color_palette(\"tab20\")    # For the first plot\n",
     "colors_step2 = color_palette(\"Set2\")     # For the second plot\n",
     "colors_step3 = color_palette(\"Dark2\")     # For the third plot\n",
-    "fontsize = 12\n",
+    "fontsize = 14\n",
     "\n",
     "# Create a figure with three subplots side by side\n",
     "fig, axes = plt.subplots(nrows=1, ncols=3, figsize=(18, 4))\n",
@@ -396,6 +396,8 @@
     "freqs = librosa.fft_frequencies(sr=sampling_rate, n_fft=win_length)\n",
     "\n",
     "if use_spectral_representation:\n",
+    "    END = 200\n",
+    "    DIFF = END - START\n",
     "    S_db = librosa.amplitude_to_db(train_band_data, ref=np.max)[:,START:END]\n",
     "\n",
     "    # Plot the spectrogram using imshow for manual control\n",
@@ -406,10 +408,15 @@
     "        interpolation='none',\n",
     "        cmap='plasma'\n",
     "    )\n",
+    "    \n",
+    "    # Adjust the yticks to show one out of every two labels\n",
     "    num_freq_bins = S_db.shape[0]\n",
-    "    ax.set_yticks(np.arange(num_freq_bins))\n",
-    "    ax.set_yticklabels([f\"{int(freqs[i])}\" for i in range(num_freq_bins)])\n",
-    "    ax.set_xlabel('Time', fontsize=fontsize)\n",
+    "    ytick_labels = [f\"{int(freqs[i])}\" if i % 2 == 0 else \"\" for i in range(num_freq_bins)]\n",
+    "    ax.set_yticks(np.arange(num_freq_bins))  # Keep all the ticks\n",
+    "    ax.set_yticklabels(ytick_labels, fontsize=fontsize)  # Set custom labels\n",
+    "    ax.tick_params(axis='both', labelsize=fontsize)\n",
+    "\n",
+    "    ax.set_xlabel('Steps', fontsize=fontsize)\n",
     "    ax.set_title('Transformed spectral Data', fontsize=fontsize)\n",
     "    fig.colorbar(img, ax=ax, format=\"%+2.0f dB\")\n",
     "else:\n",
@@ -420,6 +427,7 @@
     "\n",
     "    ax.spines['top'].set_visible(False)\n",
     "    ax.spines['right'].set_visible(False)\n",
+    "    ax.tick_params(axis='both', labelsize=fontsize)\n",
     "    ax.set_xlabel('Time', fontsize=fontsize)\n",
     "    ax.set_title('Transformed spectral Data', fontsize=fontsize)\n",
     "    ax.legend(fontsize=fontsize, loc='upper right')\n",
@@ -439,7 +447,7 @@
     "ax.spines['top'].set_visible(False)\n",
     "ax.spines['right'].set_visible(False)\n",
     "ax.tick_params(axis='both', labelsize=fontsize)\n",
-    "ax.set_xlabel('Time', fontsize=fontsize)\n",
+    "ax.set_xlabel('Steps', fontsize=fontsize)\n",
     "#ax.set_ylabel('Normalized Value', fontsize=fontsize)\n",
     "ax.set_title('Normalized spectral Data', fontsize=fontsize)\n",
     "ax.legend(fontsize=fontsize, loc='upper right')\n",
@@ -457,8 +465,8 @@
     "    )\n",
     "    axes_from.add_artist(con)\n",
     "\n",
-    "add_arrow(axes[0], axes[1], 0.98, -0.1)\n",
-    "add_arrow(axes[1], axes[2], 1.02, -0.1)\n",
+    "add_arrow(axes[0], axes[1], 0.94, -0.13)\n",
+    "add_arrow(axes[1], axes[2], 1.25, -0.05)\n",
     "\n",
     "plt.show()"
    ]
@@ -582,7 +590,7 @@
     "    common_index = 1\n",
     "    print(\"Common index for multivariate classification should be 1\")\n",
     "    print(\"\\nCheck it ! \\nFirst array \", X_train_band[1].shape, \" and second array\", X_train_band[2].shape)\n",
-    "    print(\"\\nCheck it ! \\nFirst array \", X_val_band[1].shape, \" and second array\", X_val_band[2].shape)\n",
+    "    print(\"\\nCheck it ! \\nFirst array \", X_test_band[1].shape, \" and second array\", X_test_band[2].shape)\n",
     "    common_size = X_train_band[0].shape[common_index]\n",
     "else:\n",
     "    common_index = 1\n",
@@ -777,7 +785,7 @@
     "if not is_instances_classification:\n",
     "    use_full_instance = None\n",
     "\n",
-    "if function_name == \"hadsp\" or function_name == \"desp\":\n",
+    "if function_name in [\"hadsp\", \"desp\"]:\n",
     "    max_increment_span = int(max_window_size) if int(max_window_size) - 100 < 0 else int(max_window_size) - 100\n",
     "    MAX_TIME_INCREMENT = time_increment + time_increment_span #int(max_window_size) or None or TIME_INCREMENT\n"
    ]
@@ -963,7 +971,7 @@
     "ax.tick_params(axis='both', labelsize=fontsize)\n",
     "plt.xlabel('Time', size=fontsize)\n",
     "plt.ylabel('Neuron Activity', size=fontsize)\n",
-    "plt.legend(fontsize=fontsize)"
+    "plt.legend(title=\"Neurons :\",fontsize=fontsize, title_fontsize=fontsize)"
    ]
   },
   {
@@ -985,12 +993,24 @@
     "from scipy import sparse\n",
     "\n",
     "# To set particular values\n",
-    "#connectivity_band = connectivity\n",
-    "#sr_hag_multi = spectral_radius\n",
+    "function_name = \"random\"  # \"desp\" ou \"hadsp\" or \"random\"\n",
+    "study = retrieve_best_model(function_name, dataset_name, is_multivariate, variate_type = \"multi\", data_type = \"normal\")\n",
     "\n",
-    "Win_random_multi, W_random_multi, bias_random_multi =  init_matrices(n, 1, connectivity_band, K, sr_hag_multi, seed=19823)\n",
-    "bias_random_multi= bias_random_multi*bias_scaling\n",
-    "Win_random_multi= Win_random_multi*input_scaling\n",
+    "# Print the best hyperparameters\n",
+    "print(\"Best hyperparameters: \")\n",
+    "random_esn = {}\n",
+    "for param_name, param_value in study.best_trial.params.items():\n",
+    "    random_esn[param_name] = param_value\n",
+    "    print(param_name, param_value)\n",
+    "\n",
+    "if not is_instances_classification:\n",
+    "    use_full_instance = None\n",
+    "\n",
+    "\n",
+    "Win_random_multi, W_random_multi, bias_random_multi = init_matrices(n, 1, random_esn[\"connectivity\"], K, seed=19823)\n",
+    "bias_random_multi= bias_random_multi*random_esn['bias_scaling']\n",
+    "Win_random_multi= Win_random_multi*random_esn['input_scaling']\n",
+    "\n",
     "\n",
     "eigen_random_multi = sparse.linalg.eigs(W_random_multi, k=1, which=\"LM\", maxiter=W_random_multi.shape[0] * 20, tol=0.1, return_eigenvectors=False)\n",
     "sr_random_multi = np.max(np.abs(eigen_random_multi))\n"
@@ -1095,7 +1115,7 @@
     "\n",
     "states_history_random = []\n",
     "neurons_state = np.random.uniform(0, 1, bias_random_multi.size)\n",
-    "inputs = np.concatenate(X_pretrain_band, axis=0) if is_instances_classification else X_pretrain_band\n",
+    "inputs = np.concatenate(X_pretrain_band, axis=0) if is_instances_classification else np.array(X_pretrain_band)\n",
     "for input_value in inputs:\n",
     "    neurons_state = update_reservoir(W_random_multi, Win_random_multi, input_value, neurons_state, leaky_rate, bias_random_multi, activation_function)\n",
     "    states_history_random.append(neurons_state)\n",
@@ -1265,7 +1285,8 @@
    "id": "272473cc-1309-4a35-978e-d6197c3a8f31",
    "metadata": {},
    "source": [
-    "## LUD"
+    "## Cumulative explained variance\n",
+    "Or squared_uncoupled_dynamics\n"
    ]
   },
   {
@@ -1277,10 +1298,10 @@
    "source": [
     "import analysis.richness\n",
     "reload(analysis.richness)\n",
-    "from analysis.richness import uncoupled_dynamics\n",
+    "from analysis.richness import squared_uncoupled_dynamics\n",
     "\n",
-    "uds_hag = uncoupled_dynamics(np.array(state_history_hag).T, num_windows=num_windows, A=0.99)\n",
-    "uds_multi = uncoupled_dynamics(np.array(states_history_multi).T, num_windows=num_windows, A=0.99)\n",
+    "uds_hag = squared_uncoupled_dynamics(np.array(state_history_hag), size_window=500, num_windows=num_windows, A=0.99)\n",
+    "uds_multi = squared_uncoupled_dynamics(np.array(states_history_multi), size_window=500, num_windows=num_windows, A=0.99)\n",
     "\n",
     "max_value = np.max([np.max(uds_hag), np.max(uds_hag)])\n",
     "\n",
@@ -1296,7 +1317,7 @@
     "ax.spines['right'].set_visible(False)\n",
     "ax.tick_params(axis='both', labelsize=fontsize)\n",
     "plt.xlabel('Steps', size=fontsize)\n",
-    "plt.ylabel('Average Uncoupled Dynamics', size=fontsize)\n",
+    "plt.ylabel('CEV', size=fontsize)\n",
     "plt.legend(fontsize=fontsize)\n",
     "plt.legend(fontsize=fontsize)\n",
     "plt.grid(True)"
@@ -1313,20 +1334,19 @@
     "reload(analysis.richness)\n",
     "from analysis.richness import uncoupled_dynamics\n",
     "\n",
-    "uds_random = uncoupled_dynamics(np.array(states_history_random).T, num_windows=num_windows, A=0.99)\n",
+    "uds_random = squared_uncoupled_dynamics(np.array(states_history_random), size_window=500, num_windows=num_windows, A=0.99)\n",
     "\n",
     "# Plotting the mean correlations with the standard deviation area\n",
     "fig, ax = plt.subplots(figsize=(10, 5))\n",
     "\n",
-    "time_windows = range(len(uds_random))\n",
-    "plt.plot(time_windows, uds_random, marker='.', linestyle='-', color='g',  label=\"with same input for random matrice\")\n",
-    "plt.ylim(0, max_value)\n",
+    "plt.plot(range(len(uds_random)), uds_random, marker='.', linestyle='-', color='g',  label=\"with same input for random matrice\")\n",
+    "\n",
     "fontsize=18\n",
     "ax.spines['top'].set_visible(False)\n",
     "ax.spines['right'].set_visible(False)\n",
     "ax.tick_params(axis='both', labelsize=fontsize)\n",
     "plt.xlabel('Steps', size=fontsize)\n",
-    "plt.ylabel('Average Uncoupled Dynamics', size=fontsize)\n",
+    "plt.ylabel('CEV', size=fontsize)\n",
     "plt.legend(fontsize=fontsize)\n",
     "plt.legend(fontsize=fontsize)\n",
     "plt.grid(True)"
@@ -1337,7 +1357,7 @@
    "id": "4fc60097-34c7-4c5e-9ff9-a4e50bd8cee0",
    "metadata": {},
    "source": [
-    "## LUD True"
+    "## Linear uncoupled dynamics"
    ]
   },
   {
@@ -1349,20 +1369,20 @@
    "source": [
     "import analysis.richness\n",
     "reload(analysis.richness)\n",
-    "from analysis.richness import eigen_value_spread\n",
+    "from analysis.richness import linear_uncoupled_dynamics\n",
     "num_windows = 150\n",
     "\n",
-    "uds_hag = eigen_value_spread(np.array(state_history_hag), num_windows=num_windows, theta=0.9)\n",
-    "uds_multi = eigen_value_spread(np.array(states_history_multi), num_windows=num_windows, theta=0.9)\n",
+    "LUDs_hag = linear_uncoupled_dynamics(np.array(state_history_hag), size_window=500, num_windows=num_windows, theta=0.9)\n",
+    "LUDs_multi = linear_uncoupled_dynamics(np.array(states_history_multi), size_window=500, num_windows=num_windows, theta=0.9)\n",
     "\n",
     "max_value = np.max([np.max(uds_hag), np.max(uds_hag)])\n",
     "\n",
     "# Plotting the mean correlations with the standard deviation area\n",
     "fig, ax = plt.subplots(figsize=(10, 5))\n",
     "\n",
-    "time_windows = range(len(uds_hag))\n",
-    "plt.plot(range(len(uds_hag)), uds_hag, marker='.', linestyle='-', color='r',  label=\"during training\")\n",
-    "plt.plot(range(len(uds_multi)), uds_multi, marker='.', linestyle='-', color='b',  label=\"with same input after training\")\n",
+    "time_windows = range(len(LUDs_hag))\n",
+    "plt.plot(range(len(uds_hag)), LUDs_hag, marker='.', linestyle='-', color='r',  label=\"during training\")\n",
+    "plt.plot(range(len(LUDs_multi)), uds_multi, marker='.', linestyle='-', color='b',  label=\"with same input after training\")\n",
     "plt.ylim(0, max_value)\n",
     "fontsize=18\n",
     "ax.spines['top'].set_visible(False)\n",
@@ -1378,49 +1398,103 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "447c8fce-80db-4d55-87b6-02a14002da9a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "window_data = np.array(state_history_hag).T[:, 1000:2000]\n",
-    "window_data_std = (window_data - np.mean(window_data, axis=0)) / np.std(window_data, axis=0)\n",
-    "\n",
-    "U, S, Vt = np.linalg.svd(window_data_std, full_matrices=False)\n",
-    "\n",
-    "# Calculate the normalized relevance R_j\n",
-    "R = S / np.sum(S)\n",
-    "\n",
-    "# Cumulative sum of R_j\n",
-    "cumulative_R = np.cumsum(R)\n",
-    "\n",
-    "# Find the minimum d such that the cumulative sum >= theta\n",
-    "num_components = np.searchsorted(cumulative_R, 0.9) + 1\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "4086ba68-ffa6-404b-81c4-3c553e92c135",
    "metadata": {},
    "outputs": [],
    "source": [
     "import analysis.richness\n",
     "reload(analysis.richness)\n",
-    "from analysis.richness import uncoupled_dynamics\n",
+    "from analysis.richness import linear_uncoupled_dynamics\n",
     "\n",
-    "uds_random = eigen_value_spread(np.array(states_history_random),  num_windows=num_windows, theta=0.9)\n",
+    "LUDs_random = linear_uncoupled_dynamics(np.array(states_history_random), size_window=500, num_windows=num_windows, theta=0.9)\n",
     "\n",
     "# Plotting the mean correlations with the standard deviation area\n",
     "fig, ax = plt.subplots(figsize=(10, 5))\n",
     "\n",
-    "time_windows = range(len(uds_random))\n",
-    "plt.plot(time_windows, uds_random, marker='.', linestyle='-', color='g',  label=\"with same input for random matrice\")\n",
+    "time_windows = range(len(LUDs_random))\n",
+    "plt.plot(time_windows, LUDs_random, marker='.', linestyle='-', color='g',  label=\"with same input for random matrice\")\n",
+    "fontsize=18\n",
+    "max_value = np.max([np.max(LUDs_random)])\n",
+    "plt.ylim(0, max_value)\n",
+    "ax.spines['top'].set_visible(False)\n",
+    "ax.spines['right'].set_visible(False)\n",
+    "ax.tick_params(axis='both', labelsize=fontsize)\n",
+    "plt.xlabel('Steps', size=fontsize)\n",
+    "plt.ylabel('Linear Uncoupled Dynamics', size=fontsize)\n",
+    "plt.legend(fontsize=fontsize)\n",
+    "plt.legend(fontsize=fontsize)\n",
+    "plt.grid(True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea32b731-f24b-4da3-9273-aff069b3b9e5",
+   "metadata": {},
+   "source": [
+    "## Condition number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74141fa4-b0cf-427e-b534-a0fed799ff27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import analysis.richness\n",
+    "reload(analysis.richness)\n",
+    "from analysis.richness import condition_number\n",
+    "num_windows = 150\n",
+    "\n",
+    "CNs_hag = condition_number(np.array(state_history_hag), size_window=500, num_windows=num_windows)\n",
+    "CNs_multi = condition_number(np.array(states_history_multi), size_window=500, num_windows=num_windows)\n",
+    "\n",
+    "max_value = np.max([np.max(CNs_hag), np.max(CNs_hag)])\n",
+    "\n",
+    "# Plotting the mean correlations with the standard deviation area\n",
+    "fig, ax = plt.subplots(figsize=(10, 5))\n",
+    "\n",
+    "time_windows = range(len(CNs_hag))\n",
+    "plt.plot(range(len(uds_hag)), CNs_hag, marker='.', linestyle='-', color='r',  label=\"during training\")\n",
+    "plt.plot(range(len(uds_multi)), CNs_multi, marker='.', linestyle='-', color='b',  label=\"with same input after training\")\n",
+    "plt.ylim(0, max_value)\n",
     "fontsize=18\n",
     "ax.spines['top'].set_visible(False)\n",
     "ax.spines['right'].set_visible(False)\n",
     "ax.tick_params(axis='both', labelsize=fontsize)\n",
     "plt.xlabel('Steps', size=fontsize)\n",
-    "plt.ylabel('Average Uncoupled Dynamics', size=fontsize)\n",
+    "plt.ylabel('Condition Numbers', size=fontsize)\n",
+    "plt.legend(fontsize=fontsize)\n",
+    "plt.legend(fontsize=fontsize)\n",
+    "plt.grid(True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e956ac90-411a-4b4e-8a8a-ef80ffb3f075",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import analysis.richness\n",
+    "reload(analysis.richness)\n",
+    "from analysis.richness import condition_number\n",
+    "\n",
+    "CNs_random = condition_number(np.array(states_history_random), size_window=500, num_windows=num_windows)\n",
+    "\n",
+    "# Plotting the mean correlations with the standard deviation area\n",
+    "fig, ax = plt.subplots(figsize=(10, 5))\n",
+    "\n",
+    "time_windows = range(len(CNs_random))\n",
+    "plt.plot(time_windows, CNs_random, marker='.', linestyle='-', color='g',  label=\"with same input for random matrice\")\n",
+    "fontsize=18\n",
+    "max_value = np.max([np.max(CNs_random)])\n",
+    "plt.ylim(0, max_value)\n",
+    "ax.spines['top'].set_visible(False)\n",
+    "ax.spines['right'].set_visible(False)\n",
+    "ax.tick_params(axis='both', labelsize=fontsize)\n",
+    "plt.xlabel('Steps', size=fontsize)\n",
+    "plt.ylabel('Linear Uncoupled Dynamics', size=fontsize)\n",
     "plt.legend(fontsize=fontsize)\n",
     "plt.legend(fontsize=fontsize)\n",
     "plt.grid(True)"
@@ -2232,38 +2306,55 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03cbe35b-18fa-4dc7-b598-dfd345e90ed8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bin_centers = np.array([1.5, 3.5, 5.5, 7.5])\n",
-    "poisson.pmf(np.arange(len([1, 2, 3, 4, 5, 6])), 0.08)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e4f6dbf8-e09f-4062-a3ee-6c320981b935",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "weights.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6b6614db-e2e1-4e5c-8d97-567646d6a78e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "W_hag_multi.A.flatten().shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "d995e386-8847-4da0-8197-c73ff68179bb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b5ca5733-cd7f-44df-b321-5146b6df7a39",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6298ca7-92fe-4f3b-a3fc-6a94d33ab0f5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "029ae5c6-b0d8-431b-aef0-a7d5606eb4bf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54442bc3-7602-4ab1-b008-deb139afde1f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ccced642-5be0-459c-a8b9-d0c1f2de5e1f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d57ae5f-70d7-4250-9044-0e217865a4b5",
    "metadata": {},
    "outputs": [],
    "source": []
