--- a/2.hyperparameter optimisation.ipynb
+++ b/2.hyperparameter optimisation.ipynb
@@ -373,9 +373,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f4957e6c-e0cc-4d90-a495-348a8bbab3cd",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-11-20T15:50:50.134765Z",
+     "iopub.status.busy": "2024-11-20T15:50:50.134169Z",
+     "iopub.status.idle": "2024-11-20T15:50:51.340989Z",
+     "shell.execute_reply": "2024-11-20T15:50:51.340579Z",
+     "shell.execute_reply.started": "2024-11-20T15:50:50.134725Z"
+    },
     "scrolled": true
    },
    "outputs": [],
