Update richness visualization. Code to plot all function/dataset combination + typos + bugs

--- a/1.general_framework.ipynb
+++ b/1.general_framework.ipynb
@@ -115,7 +115,7 @@
     "is_instances_classification = True\n",
     "spectral_representation = \"mfcc\"  # Can be None, \"stft\" or \"mfcc\"\n",
     "\n",
-    "dataset_name = \"FSDD\"\n",
+    "dataset_name = \"SPEECHCOMMANDS\"\n",
     "\n",
     "use_spectral_representation, is_multivariate, sampling_rate, X_train_raw, X_test_raw, Y_train_raw, Y_test, groups = load_dataset_classification(dataset_name)\n"
    ]
@@ -1298,10 +1298,10 @@
    "source": [
     "import analysis.richness\n",
     "reload(analysis.richness)\n",
-    "from analysis.richness import squared_uncoupled_dynamics\n",
+    "from analysis.richness import squared_uncoupled_dynamics, squared_uncoupled_dynamics_alternative\n",
     "\n",
-    "uds_hag = squared_uncoupled_dynamics(np.array(state_history_hag), size_window=500, num_windows=num_windows, A=0.99)\n",
-    "uds_multi = squared_uncoupled_dynamics(np.array(states_history_multi), size_window=500, num_windows=num_windows, A=0.99)\n",
+    "uds_hag = squared_uncoupled_dynamics_alternative(np.array(state_history_hag), size_window=500, num_windows=num_windows, A=0.99)\n",
+    "uds_multi = squared_uncoupled_dynamics_alternative(np.array(states_history_multi), size_window=500, num_windows=num_windows, A=0.99)\n",
     "\n",
     "max_value = np.max([np.max(uds_hag), np.max(uds_hag)])\n",
     "\n",
@@ -1332,9 +1332,9 @@
    "source": [
     "import analysis.richness\n",
     "reload(analysis.richness)\n",
-    "from analysis.richness import uncoupled_dynamics\n",
+    "from analysis.richness import squared_uncoupled_dynamics\n",
     "\n",
-    "uds_random = squared_uncoupled_dynamics(np.array(states_history_random), size_window=500, num_windows=num_windows, A=0.99)\n",
+    "uds_random = squared_uncoupled_dynamics_alternative(np.array(states_history_random), size_window=500, num_windows=num_windows, A=0.99)\n",
     "\n",
     "# Plotting the mean correlations with the standard deviation area\n",
     "fig, ax = plt.subplots(figsize=(10, 5))\n",
@@ -1375,21 +1375,21 @@
     "LUDs_hag = linear_uncoupled_dynamics(np.array(state_history_hag), size_window=500, num_windows=num_windows, theta=0.9)\n",
     "LUDs_multi = linear_uncoupled_dynamics(np.array(states_history_multi), size_window=500, num_windows=num_windows, theta=0.9)\n",
     "\n",
-    "max_value = np.max([np.max(uds_hag), np.max(uds_hag)])\n",
+    "max_value = np.max([np.max(LUDs_hag), np.max(LUDs_multi)])\n",
     "\n",
     "# Plotting the mean correlations with the standard deviation area\n",
     "fig, ax = plt.subplots(figsize=(10, 5))\n",
     "\n",
     "time_windows = range(len(LUDs_hag))\n",
     "plt.plot(range(len(uds_hag)), LUDs_hag, marker='.', linestyle='-', color='r',  label=\"during training\")\n",
-    "plt.plot(range(len(LUDs_multi)), uds_multi, marker='.', linestyle='-', color='b',  label=\"with same input after training\")\n",
+    "plt.plot(range(len(LUDs_multi)), LUDs_multi, marker='.', linestyle='-', color='b',  label=\"with same input after training\")\n",
     "plt.ylim(0, max_value)\n",
     "fontsize=18\n",
     "ax.spines['top'].set_visible(False)\n",
     "ax.spines['right'].set_visible(False)\n",
     "ax.tick_params(axis='both', labelsize=fontsize)\n",
     "plt.xlabel('Steps', size=fontsize)\n",
-    "plt.ylabel('Average Uncoupled Dynamics', size=fontsize)\n",
+    "plt.ylabel('Linear Uncoupled Dynamics', size=fontsize)\n",
     "plt.legend(fontsize=fontsize)\n",
     "plt.legend(fontsize=fontsize)\n",
     "plt.grid(True)"
@@ -1450,6 +1450,7 @@
     "CNs_multi = condition_number(np.array(states_history_multi), size_window=500, num_windows=num_windows)\n",
     "\n",
     "max_value = np.max([np.max(CNs_hag), np.max(CNs_hag)])\n",
+    "min_value = np.min([np.min(CNs_hag), np.min(CNs_hag)])\n",
     "\n",
     "# Plotting the mean correlations with the standard deviation area\n",
     "fig, ax = plt.subplots(figsize=(10, 5))\n",
@@ -1457,8 +1458,10 @@
     "time_windows = range(len(CNs_hag))\n",
     "plt.plot(range(len(uds_hag)), CNs_hag, marker='.', linestyle='-', color='r',  label=\"during training\")\n",
     "plt.plot(range(len(uds_multi)), CNs_multi, marker='.', linestyle='-', color='b',  label=\"with same input after training\")\n",
-    "plt.ylim(0, max_value)\n",
+    "plt.ylim(min_value, max_value)\n",
     "fontsize=18\n",
+    "\n",
+    "ax.set_yscale('log')\n",
     "ax.spines['top'].set_visible(False)\n",
     "ax.spines['right'].set_visible(False)\n",
     "ax.tick_params(axis='both', labelsize=fontsize)\n",
@@ -1489,7 +1492,10 @@
     "plt.plot(time_windows, CNs_random, marker='.', linestyle='-', color='g',  label=\"with same input for random matrice\")\n",
     "fontsize=18\n",
     "max_value = np.max([np.max(CNs_random)])\n",
-    "plt.ylim(0, max_value)\n",
+    "min_value = np.min([np.min(CNs_random)])\n",
+    "\n",
+    "plt.ylim(min_value, max_value)\n",
+    "ax.set_yscale('log')\n",
     "ax.spines['top'].set_visible(False)\n",
     "ax.spines['right'].set_visible(False)\n",
     "ax.tick_params(axis='both', labelsize=fontsize)\n",
