--- a/2.hyperparameter optimisation.ipynb
+++ b/2.hyperparameter optimisation.ipynb
@@ -65,14 +65,14 @@
     "scrolled": true
    },
    "source": [
-    "from datasets.load_prediction import load_dataset_prediction\n",
+    "from datasets.load_forecasting import load_dataset_forecasting\n",
     "is_instances_classification = False\n",
-    "dataset_name = \"Sunspot\"\n",
+    "dataset_name = \"Lorenz\"\n",
     "step_ahead=5\n",
     "\n",
-    "is_multivariate, sampling_rate, X_train_raw, X_test_raw, Y_train_raw, Y_test = load_dataset_prediction(dataset_name, step_ahead, visualize=True)\n",
+    "is_multivariate, sampling_rate, X_train_raw, X_test_raw, Y_train_raw, Y_test = load_dataset_forecasting(dataset_name, step_ahead, visualize=True)\n",
     "use_spectral_representation = False\n",
-    "spectral_representation = None # Can be None, \"stft\" or \"mfcc\"\n"
+    "spectral_representation = None # Can be None, \"stft\" or \"mfcc\""
    ]
   },
   {
@@ -108,7 +108,7 @@
     "is_instances_classification = True\n",
     "spectral_representation = \"mfcc\"  # Can be None, \"stft\" or \"mfcc\"\n",
     "\n",
-    "dataset_name = \"SPEECHCOMMANDS\"\n",
+    "dataset_name = \"FSDD\"\n",
     "\n",
     "use_spectral_representation, is_multivariate, sampling_rate, X_train_raw, X_test_raw, Y_train_raw, Y_test, groups = load_dataset_classification(dataset_name)\n",
     "\n",
@@ -373,16 +373,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "f4957e6c-e0cc-4d90-a495-348a8bbab3cd",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-11-20T15:50:50.134765Z",
-     "iopub.status.busy": "2024-11-20T15:50:50.134169Z",
-     "iopub.status.idle": "2024-11-20T15:50:51.340989Z",
-     "shell.execute_reply": "2024-11-20T15:50:51.340579Z",
-     "shell.execute_reply.started": "2024-11-20T15:50:50.134725Z"
-    },
     "scrolled": true
    },
    "outputs": [],
@@ -395,7 +388,7 @@
     "\n",
     "# Evaluating\n",
     "from performances.esn_model_evaluation import train_model_for_classification, predict_model_for_classification, compute_score\n",
-    "from performances.esn_model_evaluation import train_model_for_prediction, init_nvar_model, init_reservoir_model, init_ip_reservoir_model\n",
+    "from performances.esn_model_evaluation import train_model_for_prediction, init_reservoir_model, init_ip_reservoir_model, init_local_rule_reservoir_model\n",
     "\n",
     "# score for prediction\n",
     "start_step = 30\n",
@@ -404,7 +397,7 @@
     "RESERVOIR_SIZE = 500\n",
     "\n",
     "nb_jobs_per_trial = 1\n",
-    "function_name = \"ip\" # \"desp\" ou \"hadsp\", \"random\", \"random_ei\", \"ip\", or \"nvar\"\n",
+    "function_name = \"ip_correct\" # \"desp\" ou \"hadsp\", \"random\", \"random_ei\", \"ip\", \"ip_correct\" or \"nvar\"\n",
     "variate_type = \"multi\" # \"multi\" ou \"uni\"\n",
     "if variate_type == \"uni\" and is_multivariate:\n",
     "    raise ValueError(f\"Invalid variable type: {variate_type}\")\n",
@@ -415,12 +408,11 @@
     "    ridge = trial.suggest_int('ridge', -15, 1)\n",
     "    RIDGE_COEF = 10**ridge\n",
     "\n",
-    "    if function_name != \"nvar\":\n",
-    "        network_size = trial.suggest_int('network_size', RESERVOIR_SIZE, RESERVOIR_SIZE)\n",
-    "        input_scaling = trial.suggest_float('input_scaling', 0.01, 0.2, step=0.005)\n",
-    "        bias_scaling = trial.suggest_float('bias_scaling', 0, 0.2, step=0.005)\n",
-    "        leaky_rate = trial.suggest_float('leaky_rate', 1, 1)\n",
-    "        input_connectivity = trial.suggest_float('input_connectivity', 1, 1)\n",
+    "    network_size = trial.suggest_int('network_size', RESERVOIR_SIZE, RESERVOIR_SIZE)\n",
+    "    input_scaling = trial.suggest_float('input_scaling', 0.01, 0.2, step=0.005)\n",
+    "    bias_scaling = trial.suggest_float('bias_scaling', 0, 0.2, step=0.005)\n",
+    "    leaky_rate = trial.suggest_float('leaky_rate', 1, 1)\n",
+    "    input_connectivity = trial.suggest_float('input_connectivity', 1, 1)\n",
     "\n",
     "    min_window_size = sampling_rate/np.max(np.hstack(peak_freqs))\n",
     "    max_window_size = sampling_rate/np.min(np.hstack(peak_freqs))\n",
@@ -437,23 +429,18 @@
     "        intrinsic_saturation = trial.suggest_float('intrinsic_saturation', 0.8, 0.98, step=0.02)\n",
     "        intrinsic_coef = trial.suggest_float('intrinsic_coef', 0.8, 0.98, step=0.02)\n",
     "        method = trial.suggest_categorical(\"method\", [\"pearson\"])\n",
-    "    elif function_name == \"random\" or function_name == \"random_ei\":\n",
+    "    elif function_name in [\"random\", \"random_ei\", \"ip_correct\", \"oja\"]:\n",
     "        connectivity = trial.suggest_float('connectivity', 0, 1)\n",
     "        sr = trial.suggest_float('spectral_radius', 0.4, 1.6, step=0.01)\n",
-    "    elif function_name == \"ip\":\n",
-    "        connectivity = trial.suggest_float('connectivity', 0, 1)\n",
-    "        sr = trial.suggest_float('spectral_radius', 0.4, 1.6, step=0.01)\n",
-    "        mu = trial.suggest_float('mu', 0, 1)\n",
-    "        sigma = trial.suggest_float('sigma', 0, 1)\n",
-    "    elif function_name == \"nvar\":\n",
-    "        delay = trial.suggest_int('delay', 1, 10)\n",
-    "        strides = trial.suggest_int('strides', 1, 2)\n",
-    "        max_order, network_size = find_optimal_order(delay, common_size, strides, RESERVOIR_SIZE, 4)\n",
-    "        order = trial.suggest_int('order', 1, max_order)\n",
-    "        network_size = trial.suggest_int('number_parameters', network_size, network_size)\n",
-    "        print(delay, strides, order)\n",
     "    else:\n",
     "        raise ValueError(f\"Invalid function name: {function_name}\")\n",
+    "\n",
+    "    if function_name == \"ip_correct\":\n",
+    "        mu = trial.suggest_float('mu', 0, 1)\n",
+    "        sigma = trial.suggest_float('sigma', 0, 1)\n",
+    "    elif function_name == \"oja\":\n",
+    "        # We often use a log-uniform distribution for learning rates:\n",
+    "        oja_lr = trial.suggest_float('oja_lr', 1e-5, 1e-1, log=True)\n",
     "\n",
     "    if function_name == \"hadsp\" or function_name == \"desp\":\n",
     "        connectivity = trial.suggest_float('connectivity', 0, 0)\n",
@@ -486,17 +473,13 @@
     "        train_data = X_train_band[i]  # X_train_band_noisy_duplicated or X_train_band_duplicated\n",
     "        val_data = X_val_band_noisy[i] if data_type == \"noisy\" else X_val_band[i]\n",
     "\n",
-    "        # UNSUPERVISED PRETRAINING \n",
+    "        # INITIALISATION AND UNSUPERVISED PRETRAINING \n",
     "        if function_name == \"random_ei\":\n",
     "            Win, W, bias = init_matrices(n, input_connectivity, connectivity,  K, w_distribution=stats.uniform(-1, 1), seed=random.randint(0, 1000))\n",
-    "            bias *= bias_scaling\n",
-    "            Win *= input_scaling\n",
-    "        elif function_name == \"nvar\":\n",
-    "            pass\n",
     "        else:\n",
     "            Win, W, bias = init_matrices(n, input_connectivity, connectivity,  K, seed=random.randint(0, 1000))\n",
-    "            bias *= bias_scaling\n",
-    "            Win *= input_scaling\n",
+    "        bias *= bias_scaling\n",
+    "        Win *= input_scaling\n",
     "\n",
     "        if function_name == \"hadsp\":\n",
     "            W, (_, _, _) = run_algorithm(W, Win, bias, leaky_rate, activation_function, pretrain_data, TIME_INCREMENT, weight_increment,\n",
@@ -507,26 +490,26 @@
     "                                    variance_target, variance_spread, function_name, is_instance=is_instances_classification, use_full_instance = use_full_instance, \n",
     "                                    max_increment=MAX_TIME_INCREMENT, max_partners=max_partners, method = method, \n",
     "                                    intrinsic_saturation=intrinsic_saturation, intrinsic_coef=intrinsic_coef, n_jobs = nb_jobs_per_trial)\n",
-    "        elif function_name in [\"random\", \"random_ei\", \"ip\"]:\n",
+    "        elif function_name in [\"random\", \"random_ei\", \"ip_correct\", \"oja\"]:\n",
     "            eigen = sparse.linalg.eigs(W, k=1, which=\"LM\", maxiter=W.shape[0] * 20, tol=0.1, return_eigenvectors=False)\n",
     "            W *= sr / max(abs(eigen))\n",
-    "        elif function_name == \"nvar\":\n",
-    "            pass\n",
     "        else:\n",
     "            raise ValueError(f\"Invalid function: {function_name}\")\n",
-    "        \n",
     "\n",
-    "        # TRAINING and EVALUATION\n",
-    "        if function_name == \"nvar\":\n",
-    "            reservoir, readout = init_nvar_model(delay, order, strides, ridge_coef=RIDGE_COEF)\n",
-    "        elif function_name == \"ip\":\n",
+    "        # unsupervised local rules\n",
+    "        if function_name == \"ip_correct\":\n",
     "            reservoir, readout = init_ip_reservoir_model(W, Win, bias, mu, sigma, leaky_rate, activation_function, ridge_coef=RIDGE_COEF)\n",
+    "            _ = reservoir.fit(np.concatenate(X_pretrain_band[i]), warmup=100)\n",
+    "        elif function_name == \"oja\":\n",
+    "            reservoir, readout = init_oja_reservoir_model(W, Win, bias, mu, sigma, leaky_rate, activation_function, ridge_coef=RIDGE_COEF)\n",
+    "            reservoir.fit(np.concatenate(X_pretrain_band[i]), warmup=100)\n",
     "        else:\n",
     "            reservoir, readout = init_reservoir_model(W, Win, bias, leaky_rate, activation_function, ridge_coef=RIDGE_COEF)\n",
     "\n",
+    "        # TRAINING and EVALUATION\n",
     "        if is_instances_classification:\n",
     "            mode = \"sequence-to-vector\"\n",
-    "            train_model_for_classification(reservoir, readout, X_train_band[1], Y_train[1], n_jobs = nb_jobs_per_trial, mode=mode)\n",
+    "            train_model_for_classification(reservoir, readout, train_data, Y_train[i], n_jobs = nb_jobs_per_trial, mode=mode)\n",
     "\n",
     "            Y_pred = predict_model_for_classification(reservoir, readout, val_data, n_jobs = nb_jobs_per_trial, mode=mode)\n",
     "            score = compute_score(Y_pred, Y_val[i], is_instances_classification)\n",
@@ -575,17 +558,17 @@
     "    study = optuna.create_study(storage=storage, sampler=sampler, study_name=study_name, direction=direction, load_if_exists=True)\n",
     "    study.optimize(objective, n_trials=n_trials)\n",
     "\n",
-    "N_TRIALS = 400\n",
+    "N_TRIALS = 150\n",
     "n_parallel_studies = 10\n",
     "trials_per_process = N_TRIALS // n_parallel_studies\n",
     "\n",
     "# Use joblib to parallelize the optimization\n",
-    "#Parallel(n_jobs=n_parallel_studies)(\n",
-    "#    delayed(optimize_study)(trials_per_process) for _ in range(n_parallel_studies)\n",
-    "#)\n",
+    "Parallel(n_jobs=n_parallel_studies)(\n",
+    "    delayed(optimize_study)(trials_per_process) for _ in range(n_parallel_studies)\n",
+    ")\n",
     "\n",
-    "study = optuna.create_study(storage=storage, sampler=sampler, study_name=study_name, direction=direction, load_if_exists=True)\n",
-    "study.optimize(objective, n_trials=N_TRIALS)"
+    "#study = optuna.create_study(storage=storage, sampler=sampler, study_name=study_name, direction=direction, load_if_exists=True)\n",
+    "#study.optimize(objective, n_trials=N_TRIALS)"
    ]
   },
   {
@@ -603,13 +586,21 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c048324a-889c-4459-94c8-d6d8c57af9e1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "hadsp_env",
+   "display_name": "hag_env",
    "language": "python",
-   "name": "hadsp_env"
+   "name": "hag_env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -621,7 +612,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
