Improvment performances local rule + somewhat functionning  local+IP + better code factorisation to initialize the reservoirs and the readout + function naming

--- a/1.general_framework.ipynb
+++ b/1.general_framework.ipynb
@@ -1658,10 +1658,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from performances.esn_model_evaluation import init_nvar_model, init_reservoir_model, init_ip_reservoir_model\n",
+    "from performances.esn_model_evaluation import init_nvar_model, init_reservoir, init_ip_reservoir\n",
     "\n",
-    "reservoir_hag_multi, readout_hag_multi = init_reservoir_model(W_hag_multi, Win_hag_multi, bias_hag_multi, leaky_rate, activation_function, ridge_coef=RIDGE_COEF)\n",
-    "reservoir_random_multi, readout_random_multi = init_reservoir_model(W_random_multi, Win_random_multi, bias_random_multi, leaky_rate, activation_function, ridge_coef=RIDGE_COEF)\n",
+    "reservoir_hag_multi, readout_hag_multi = init_reservoir(W_hag_multi, Win_hag_multi, bias_hag_multi, leaky_rate, activation_function, ridge_coef=RIDGE_COEF)\n",
+    "reservoir_random_multi, readout_random_multi = init_reservoir(W_random_multi, Win_random_multi, bias_random_multi, leaky_rate, activation_function, ridge_coef=RIDGE_COEF)\n",
     "\n",
     "if False: # TODO: change condition for when we want to plot univariate data\n",
     "    reservoir_hag_uni, readout_hag_uni  = init_reservoir_model(W_hag_uni, Win_hag_uni, bias_hag_uni, leaky_rate, activation_function, ridge_coef=RIDGE_COEF)\n",
@@ -1920,7 +1920,7 @@
    "outputs": [],
    "source": [
     "from performances.esn_model_evaluation import train_model_for_prediction, compute_score\n",
-    "from performances.esn_model_evaluation import init_nvar_model, init_reservoir_model, init_ip_reservoir_model\n",
+    "from performances.esn_model_evaluation import init_nvar_model, init_reservoir, init_ip_reservoir\n",
     "\n",
     "if not is_multivariate:\n",
     "    train_data_uni = X_train # X_train_noisy or X_train\n",
