--- a/2.hyperparameter optimisation.ipynb
+++ b/2.hyperparameter optimisation.ipynb
@@ -14,7 +14,6 @@
    "source": [
     "import numpy as np\n",
     "from joblib import Parallel, delayed\n",
-    "from tqdm import tqdm\n",
     "\n",
     "from matplotlib import pyplot as plt\n",
     "\n",
@@ -189,7 +188,7 @@
     "#Preprocessing\n",
     "from datasets.multivariate_generation import generate_multivariate_dataset, extract_peak_frequencies\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
-    "from datasets.preprocessing import scale_data, add_noise, duplicate_data\n",
+    "from datasets.preprocessing import scale_data, add_noise\n",
     "\n",
     "# Define noise parameter\n",
     "noise_std = 0.001\n",
@@ -372,13 +371,10 @@
    ]
   },
   {
+   "metadata": {},
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f4957e6c-e0cc-4d90-a495-348a8bbab3cd",
-   "metadata": {
-    "scrolled": true
-   },
    "outputs": [],
+   "execution_count": null,
    "source": [
     "#Pretraining\n",
     "from reservoir.reservoir import init_matrices\n",
@@ -388,7 +384,7 @@
     "\n",
     "# Evaluating\n",
     "from performances.esn_model_evaluation import train_model_for_classification, predict_model_for_classification, compute_score\n",
-    "from performances.esn_model_evaluation import train_model_for_prediction, init_reservoir_model, init_ip_reservoir_model, init_local_rule_reservoir_model\n",
+    "from performances.esn_model_evaluation import train_model_for_prediction, init_reservoir, init_ip_reservoir, init_local_rule_reservoir, init_ip_local_rule_reservoir, init_readout\n",
     "\n",
     "# score for prediction\n",
     "start_step = 30\n",
@@ -405,8 +401,8 @@
     "def objective(trial):\n",
     "    # Suggest values for the parameters you want to optimize\n",
     "    # COMMON\n",
-    "    ridge = trial.suggest_int('ridge', -15, 1)\n",
-    "    RIDGE_COEF = 10**ridge\n",
+    "    ridge = trial.suggest_int('ridge', -13, 1)\n",
+    "    RIDGE_COEF = 10 ** ridge\n",
     "\n",
     "    network_size = trial.suggest_int('network_size', RESERVOIR_SIZE, RESERVOIR_SIZE)\n",
     "    input_scaling = trial.suggest_float('input_scaling', 0.01, 0.2, step=0.005)\n",
@@ -414,8 +410,8 @@
     "    leaky_rate = trial.suggest_float('leaky_rate', 1, 1)\n",
     "    input_connectivity = trial.suggest_float('input_connectivity', 1, 1)\n",
     "\n",
-    "    min_window_size = sampling_rate/np.max(np.hstack(peak_freqs))\n",
-    "    max_window_size = sampling_rate/np.min(np.hstack(peak_freqs))\n",
+    "    min_window_size = sampling_rate / np.max(np.hstack(peak_freqs))\n",
+    "    max_window_size = sampling_rate / np.min(np.hstack(peak_freqs))\n",
     "\n",
     "    # HADSP\n",
     "    if function_name == \"hadsp\":\n",
@@ -429,33 +425,34 @@
     "        intrinsic_saturation = trial.suggest_float('intrinsic_saturation', 0.8, 0.98, step=0.02)\n",
     "        intrinsic_coef = trial.suggest_float('intrinsic_coef', 0.8, 0.98, step=0.02)\n",
     "        method = trial.suggest_categorical(\"method\", [\"pearson\"])\n",
-    "    elif function_name in [\"random\", \"random_ei\", \"ip_correct\", \"oja\"]:\n",
+    "    elif function_name in [\"random\", \"random_ei\", \"ip_correct\", \"anti-oja\", \"ip-anti-oja\"]:\n",
     "        connectivity = trial.suggest_float('connectivity', 0, 1)\n",
     "        sr = trial.suggest_float('spectral_radius', 0.4, 1.6, step=0.01)\n",
     "    else:\n",
     "        raise ValueError(f\"Invalid function name: {function_name}\")\n",
     "\n",
-    "    if function_name == \"ip_correct\":\n",
+    "    if function_name in [\"ip_correct\", \"ip-anti-oja\"]:\n",
     "        mu = trial.suggest_float('mu', 0, 1)\n",
     "        sigma = trial.suggest_float('sigma', 0, 1)\n",
-    "    elif function_name == \"oja\":\n",
+    "        learning_rate = trial.suggest_float('learning_rate', 1e-6, 1e-1, log=True)\n",
+    "    if function_name in [\"anti-oja\", \"ip-anti-oja\"]:\n",
     "        # We often use a log-uniform distribution for learning rates:\n",
-    "        oja_lr = trial.suggest_float('oja_lr', 1e-5, 1e-1, log=True)\n",
+    "        oja_eta = trial.suggest_float('oja_eta', 1e-5, 1e-1, log=True)\n",
     "\n",
-    "    if function_name == \"hadsp\" or function_name == \"desp\":\n",
+    "    if function_name in [\"hadsp\", \"desp\"]:\n",
     "        connectivity = trial.suggest_float('connectivity', 0, 0)\n",
     "        weight_increment = trial.suggest_float('weight_increment', 0.001, 0.1, step=0.001)\n",
     "        max_partners = trial.suggest_int('max_partners', 10, 20)\n",
     "        if is_instances_classification:\n",
     "            use_full_instance = trial.suggest_categorical('use_full_instance', [True, False])\n",
-    "        else :\n",
+    "        else:\n",
     "            use_full_instance = False\n",
-    "        TIME_INCREMENT = trial.suggest_int('time_increment', int(min_window_size+1), 100) # int(min_window_size+1) or int(max_window_size)\n",
+    "        TIME_INCREMENT = trial.suggest_int('time_increment', int(min_window_size + 1),\n",
+    "                                           100)  # int(min_window_size+1) or int(max_window_size)\n",
     "        max_increment_span = int(max_window_size) if int(max_window_size) - 100 < 0 else int(max_window_size) - 100\n",
     "        time_increment_span = trial.suggest_int('time_increment_span', 0, max_increment_span)\n",
-    "        MAX_TIME_INCREMENT = TIME_INCREMENT + time_increment_span #int(max_window_size) or None or TIME_INCREMENT\n",
-    "    \n",
-    "    \n",
+    "        MAX_TIME_INCREMENT = TIME_INCREMENT + time_increment_span  # int(max_window_size) or None or TIME_INCREMENT\n",
+    "\n",
     "    # CROSS-VALIDATION METHODS\n",
     "    total_score = 0\n",
     "    for i in range(nb_splits):\n",
@@ -464,59 +461,84 @@
     "            common_size = X_train_band[i][0].shape[common_index]\n",
     "        else:\n",
     "            common_size = X_train_band[i].shape[common_index]\n",
-    "        \n",
+    "\n",
     "        # We want the size of the reservoir to be at least network_size\n",
     "        K = math.ceil(network_size / common_size)\n",
     "        n = common_size * K\n",
-    "    \n",
+    "\n",
     "        pretrain_data = X_pretrain_band[i]\n",
     "        train_data = X_train_band[i]  # X_train_band_noisy_duplicated or X_train_band_duplicated\n",
     "        val_data = X_val_band_noisy[i] if data_type == \"noisy\" else X_val_band[i]\n",
     "\n",
-    "        # INITIALISATION AND UNSUPERVISED PRETRAINING \n",
+    "        # INITIALISATION AND UNSUPERVISED PRETRAINING\n",
     "        if function_name == \"random_ei\":\n",
-    "            Win, W, bias = init_matrices(n, input_connectivity, connectivity,  K, w_distribution=stats.uniform(-1, 1), seed=random.randint(0, 1000))\n",
+    "            Win, W, bias = init_matrices(n, input_connectivity, connectivity, K, w_distribution=stats.uniform(-1, 1),\n",
+    "                                         seed=random.randint(0, 1000))\n",
     "        else:\n",
-    "            Win, W, bias = init_matrices(n, input_connectivity, connectivity,  K, seed=random.randint(0, 1000))\n",
+    "            Win, W, bias = init_matrices(n, input_connectivity, connectivity, K, seed=random.randint(0, 1000))\n",
     "        bias *= bias_scaling\n",
     "        Win *= input_scaling\n",
     "\n",
     "        if function_name == \"hadsp\":\n",
-    "            W, (_, _, _) = run_algorithm(W, Win, bias, leaky_rate, activation_function, pretrain_data, TIME_INCREMENT, weight_increment,\n",
-    "                                 target_rate, rate_spread, function_name, is_instance=is_instances_classification, use_full_instance = use_full_instance, \n",
-    "                                 max_increment=MAX_TIME_INCREMENT, max_partners=max_partners, method = method, n_jobs = nb_jobs_per_trial)\n",
+    "            W, (_, _, _) = run_algorithm(W, Win, bias, leaky_rate, activation_function, pretrain_data, TIME_INCREMENT,\n",
+    "                                         weight_increment,\n",
+    "                                         target_rate, rate_spread, function_name,\n",
+    "                                         is_instance=is_instances_classification, use_full_instance=use_full_instance,\n",
+    "                                         max_increment=MAX_TIME_INCREMENT, max_partners=max_partners, method=method,\n",
+    "                                         n_jobs=nb_jobs_per_trial)\n",
     "        elif function_name == \"desp\":\n",
-    "            W, (_, _, _) = run_algorithm(W, Win, bias, leaky_rate, activation_function, pretrain_data, TIME_INCREMENT, weight_increment,\n",
-    "                                    variance_target, variance_spread, function_name, is_instance=is_instances_classification, use_full_instance = use_full_instance, \n",
-    "                                    max_increment=MAX_TIME_INCREMENT, max_partners=max_partners, method = method, \n",
-    "                                    intrinsic_saturation=intrinsic_saturation, intrinsic_coef=intrinsic_coef, n_jobs = nb_jobs_per_trial)\n",
-    "        elif function_name in [\"random\", \"random_ei\", \"ip_correct\", \"oja\"]:\n",
+    "            W, (_, _, _) = run_algorithm(W, Win, bias, leaky_rate, activation_function, pretrain_data, TIME_INCREMENT,\n",
+    "                                         weight_increment,\n",
+    "                                         variance_target, variance_spread, function_name,\n",
+    "                                         is_instance=is_instances_classification, use_full_instance=use_full_instance,\n",
+    "                                         max_increment=MAX_TIME_INCREMENT, max_partners=max_partners, method=method,\n",
+    "                                         intrinsic_saturation=intrinsic_saturation, intrinsic_coef=intrinsic_coef,\n",
+    "                                         n_jobs=nb_jobs_per_trial)\n",
+    "        elif function_name in [\"random\", \"random_ei\", \"ip_correct\", \"anti-oja\", \"ip-anti-oja\"]:\n",
     "            eigen = sparse.linalg.eigs(W, k=1, which=\"LM\", maxiter=W.shape[0] * 20, tol=0.1, return_eigenvectors=False)\n",
     "            W *= sr / max(abs(eigen))\n",
     "        else:\n",
     "            raise ValueError(f\"Invalid function: {function_name}\")\n",
     "\n",
     "        # unsupervised local rules\n",
-    "        if function_name == \"ip_correct\":\n",
-    "            reservoir, readout = init_ip_reservoir_model(W, Win, bias, mu, sigma, leaky_rate, activation_function, ridge_coef=RIDGE_COEF)\n",
-    "            _ = reservoir.fit(np.concatenate(X_pretrain_band[i]), warmup=100)\n",
-    "        elif function_name == \"oja\":\n",
-    "            reservoir, readout = init_oja_reservoir_model(W, Win, bias, mu, sigma, leaky_rate, activation_function, ridge_coef=RIDGE_COEF)\n",
-    "            reservoir.fit(np.concatenate(X_pretrain_band[i]), warmup=100)\n",
+    "        if is_instances_classification:\n",
+    "            unsupervised_pretrain = np.concatenate(pretrain_data).astype(float)\n",
     "        else:\n",
-    "            reservoir, readout = init_reservoir_model(W, Win, bias, leaky_rate, activation_function, ridge_coef=RIDGE_COEF)\n",
+    "            unsupervised_pretrain = pretrain_data.astype(float)\n",
+    "        if function_name == \"ip_correct\":\n",
+    "            reservoir = init_ip_reservoir(W, Win, bias, mu=mu, sigma=sigma, learning_rate=learning_rate,\n",
+    "                                          leaking_rate=leaky_rate, activation_function=activation_function\n",
+    "                                          )\n",
+    "            _ = reservoir.fit(unsupervised_pretrain, warmup=100)\n",
+    "        elif function_name == \"anti_oja\":\n",
+    "            reservoir = init_local_rule_reservoir(W, Win, bias, local_rule=\"anti-oja\", eta=oja_eta,\n",
+    "                                                  synapse_normalization=True, bcm_theta=None,\n",
+    "                                                  leaking_rate=leaky_rate, activation_function=activation_function,\n",
+    "                                                  )\n",
+    "            _ = reservoir.fit(unsupervised_pretrain, warmup=100)\n",
+    "        elif function_name == \"ip-anti-oja\":\n",
+    "            reservoir = init_ip_local_rule_reservoir(W, Win, bias, local_rule=\"anti-oja\", eta=oja_eta,\n",
+    "                                                     synapse_normalization=True, bcm_theta=None,\n",
+    "                                                     mu=mu, sigma=sigma, learning_rate=learning_rate,\n",
+    "                                                     leaking_rate=leaky_rate, activation_function=activation_function,\n",
+    "                                                     )\n",
+    "            _ = reservoir.fit(unsupervised_pretrain, warmup=100)\n",
+    "        else:\n",
+    "            reservoir = init_reservoir(W, Win, bias, leaky_rate, activation_function)\n",
+    "        readout = init_readout(ridge_coef=RIDGE_COEF)\n",
     "\n",
     "        # TRAINING and EVALUATION\n",
     "        if is_instances_classification:\n",
     "            mode = \"sequence-to-vector\"\n",
-    "            train_model_for_classification(reservoir, readout, train_data, Y_train[i], n_jobs = nb_jobs_per_trial, mode=mode)\n",
+    "            train_model_for_classification(reservoir, readout, train_data, Y_train[i], n_jobs=nb_jobs_per_trial,\n",
+    "                                           mode=mode)\n",
     "\n",
-    "            Y_pred = predict_model_for_classification(reservoir, readout, val_data, n_jobs = nb_jobs_per_trial, mode=mode)\n",
+    "            Y_pred = predict_model_for_classification(reservoir, readout, val_data, n_jobs=nb_jobs_per_trial, mode=mode)\n",
     "            score = compute_score(Y_pred, Y_val[i], is_instances_classification)\n",
     "        else:\n",
     "            esn = train_model_for_prediction(reservoir, readout, train_data, Y_train[i])\n",
-    "            \n",
-    "            Y_pred =  esn.run(val_data, reset=False)\n",
+    "\n",
+    "            Y_pred = esn.run(val_data, reset=False)\n",
     "            score = compute_score(Y_pred, Y_val[i], is_instances_classification)\n",
     "\n",
     "        total_score += score\n",
@@ -524,21 +546,18 @@
     "    average_score = total_score / nb_splits  # Average the score\n",
     "\n",
     "    return average_score\n"
-   ]
+   ],
+   "id": "808838b6a03ba5bd"
   },
   {
+   "metadata": {},
    "cell_type": "code",
-   "execution_count": null,
-   "id": "94a7cbad-31bd-49d2-a3c1-00d9ccb6aaab",
-   "metadata": {
-    "scrolled": true
-   },
    "outputs": [],
+   "execution_count": null,
    "source": [
     "import optuna\n",
     "from optuna.samplers import TPESampler\n",
     "from performances.utility import camel_to_snake\n",
-    "from multiprocessing import Pool\n",
     "\n",
     "url= \"sqlite:///optuna_\" + camel_to_snake(dataset_name) + \"_db.sqlite3\"\n",
     "print(url)\n",
@@ -569,15 +588,8 @@
     "\n",
     "#study = optuna.create_study(storage=storage, sampler=sampler, study_name=study_name, direction=direction, load_if_exists=True)\n",
     "#study.optimize(objective, n_trials=N_TRIALS)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "afea5f7c-4fda-4977-b27a-be04731e9677",
-   "metadata": {},
-   "source": [
-    "# Results"
-   ]
+   ],
+   "id": "b3b55dc47e084ca3"
   },
   {
    "cell_type": "code",
