--- a/3.test performances.ipynb
+++ b/3.test performances.ipynb
@@ -236,30 +236,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scipy import sparse, stats\n",
+    "from scipy import stats\n",
     "from numpy import random\n",
     "import os\n",
     "\n",
-    "#Pretraining\n",
-    "from reservoir.reservoir import init_matrices\n",
-    "from connexion_generation.hag import run_algorithm\n",
     "\n",
     "# Evaluating\n",
     "from performances.esn_model_evaluation import train_model_for_classification, predict_model_for_classification, compute_score\n",
-    "from performances.esn_model_evaluation import train_model_for_prediction, init_nvar_model, init_reservoir_model, init_ip_reservoir_model\n",
+    "from performances.esn_model_evaluation import train_model_for_prediction, init_reservoir, init_ip_reservoir_model, init_local_rule_reservoir\n",
     "from analysis.richness import spectral_radius, pearson, squared_uncoupled_dynamics_alternative, condition_number\n",
-    "\n",
-    "import optuna\n",
-    "from performances.utility import camel_to_snake, retrieve_best_model\n",
     "\n",
     "\n",
     "def evaluate_dataset_on_test(study, function_name, pretrain_data, train_data, test_data, Y_train, Y_test, is_instances_classification, nb_trials = 8, record_metrics=False):\n",
     "    # Collect all hyperparameters in a dictionary\n",
     "    hyperparams = {param_name: param_value for param_name, param_value in study.best_trial.params.items()}\n",
     "    print(hyperparams)\n",
-    "    if function_name != \"nvar\":\n",
-    "        leaky_rate = 1\n",
-    "        input_connectivity = 1\n",
+    "    leaky_rate = 1\n",
+    "    input_connectivity = 1\n",
     "\n",
     "    if 'variance_target' not in hyperparams and 'min_variance' in hyperparams:\n",
     "        hyperparams['variance_target'] = hyperparams['min_variance']\n",
@@ -294,14 +287,10 @@
     "        # UNSUPERVISED PRETRAINING \n",
     "        if function_name == \"random_ei\":\n",
     "            Win, W, bias = init_matrices(n, input_connectivity, hyperparams['connectivity'],  K, w_distribution=stats.uniform(-1, 1), seed=random.randint(0, 1000))\n",
-    "            bias *= hyperparams['bias_scaling']\n",
-    "            Win *= hyperparams['input_scaling']\n",
-    "        elif function_name == \"nvar\":\n",
-    "            pass\n",
     "        else:\n",
     "            Win, W, bias = init_matrices(n, input_connectivity, hyperparams['connectivity'] ,  K, seed=random.randint(0, 1000))\n",
-    "            bias *= hyperparams['bias_scaling']\n",
-    "            Win *= hyperparams['input_scaling']\n",
+    "        bias *= hyperparams['bias_scaling']\n",
+    "        Win *= hyperparams['input_scaling']\n",
     "\n",
     "        if function_name == \"hadsp\":\n",
     "            W, (_, _, _) = run_algorithm(W, Win, bias, hyperparams['leaky_rate'], activation_function, pretrain_data, hyperparams['time_increment'], hyperparams['weight_increment'],\n",
@@ -312,23 +301,32 @@
     "                                    hyperparams['variance_target'], hyperparams['variance_spread'], function_name, is_instance=is_instances_classification, \n",
     "                                    use_full_instance = hyperparams['use_full_instance'], max_increment=MAX_TIME_INCREMENT, max_partners=hyperparams['max_partners'], method = hyperparams['method'], \n",
     "                                    intrinsic_saturation=hyperparams['intrinsic_saturation'], intrinsic_coef=hyperparams['intrinsic_coef'], n_jobs = nb_jobs)\n",
-    "        elif function_name in [\"random\", \"random_ei\", \"ip\"]:\n",
+    "        elif function_name in [\"random\", \"random_ei\", \"ip_correct\", \"anti-oja\"]:\n",
     "            eigen = sparse.linalg.eigs(W, k=1, which=\"LM\", maxiter=W.shape[0] * 20, tol=0.1, return_eigenvectors=False)\n",
     "            W *= hyperparams['spectral_radius'] / max(abs(eigen))\n",
-    "        elif function_name == \"nvar\":\n",
-    "            pass\n",
     "        else:\n",
     "            raise ValueError(f\"Invalid function: {function_name}\")\n",
     "        \n",
     "\n",
-    "        # TRAINING and EVALUATION\n",
-    "        if function_name == \"nvar\":\n",
-    "            reservoir, readout = init_nvar_model(delay, order, strides, ridge_coef=RIDGE_COEF)\n",
-    "        elif function_name == \"ip\":\n",
-    "            reservoir, readout = init_ip_reservoir_model(W, Win, bias, hyperparams['mu'], hyperparams['sigma'], hyperparams['leaky_rate'], activation_function, ridge_coef=RIDGE_COEF)\n",
+    "        # unsupervised local rules\n",
+    "        if is_instances_classification:\n",
+    "            unsupervised_pretrain = np.concatenate(train_data).astype(float)\n",
     "        else:\n",
-    "            reservoir, readout = init_reservoir_model(W, Win, bias, hyperparams['leaky_rate'], activation_function, ridge_coef=RIDGE_COEF)\n",
+    "            unsupervised_pretrain = train_data.astype(float)\n",
+    "        if function_name == \"ip_correct\":\n",
+    "            reservoir, readout = init_ip_reservoir_model(W, Win, bias, hyperparams['mu'], hyperparams['sigma'], hyperparams['leaky_rate'], \n",
+    "                                                         activation_function, ridge_coef=RIDGE_COEF)\n",
+    "            _ = reservoir.fit(unsupervised_pretrain, warmup=100)\n",
+    "        elif function_name == \"anti_oja\":\n",
+    "            reservoir, readout = init_local_rule_reservoir(W, Win, bias, learning_rule=\"anti-oja\", eta=hyperparams['oja_eta'],\n",
+    "                                                           synapse_normalization=True, bcm_theta=None,\n",
+    "                                                           leaking_rate=hyperparams['leaky_rate'], activation_function=activation_function,\n",
+    "                                                           ridge_coef=RIDGE_COEF)\n",
+    "            _ = reservoir.fit(unsupervised_pretrain, warmup=100)\n",
+    "        else:\n",
+    "            reservoir, readout = init_reservoir(W, Win, bias, hyperparams['leaky_rate'], activation_function, ridge_coef=RIDGE_COEF)\n",
     "\n",
+    "        # TRAINING and EVALUATION\n",
     "        if is_instances_classification:\n",
     "            mode = \"sequence-to-vector\"\n",
     "            train_model_for_classification(reservoir, readout, train_data, Y_train, n_jobs = nb_jobs, mode=mode)\n",
@@ -381,81 +379,81 @@
     "import pandas as pd\n",
     "from datetime import datetime\n",
     "\n",
+    "from performances.utility import retrieve_best_model\n",
+    "\n",
     "# Create an empty DataFrame to store the results\n",
     "columns = ['Dataset', 'Function', 'Average Score', 'Standard Deviation', 'Date']\n",
-    "new_results = pd.DataFrame(columns=columns)\n",
-    "\n",
     "variate_type = \"multi\"  # \"multi\" or \"uni\"\n",
     "\n",
-    "dataset_name =  \"SPEECHCOMMANDS\"\n",
-    "pretrain_data, train_data, test_data, Y_train, Y_test, is_multivariate, is_instances_classification = load_data(dataset_name, data_type, noise_std, visualize=True)\n",
-    "\n",
-    "\n",
-    "if is_instances_classification:\n",
-    "    file_name = \"outputs/test_results_classification.csv\"\n",
-    "else: \n",
-    "    file_name = \"outputs/test_results_prediction.csv\"\n",
-    "    \n",
-    "# Simulate your data and loop for evaluation\n",
-    "print(dataset_name)\n",
-    "for function_name in [\"ip\"]: # \"desp\", \"hadsp\", \"random\", \"random_ei\", \n",
-    "    print(function_name)\n",
-    "    study = retrieve_best_model(function_name, dataset_name, is_multivariate, variate_type = \"multi\", data_type = \"normal\")\n",
-    "\n",
-    "    scores = evaluate_dataset_on_test(\n",
-    "        study, \n",
-    "        function_name, \n",
-    "        pretrain_data, \n",
-    "        train_data, \n",
-    "        test_data,\n",
-    "        Y_train, \n",
-    "        Y_test,\n",
-    "        is_instances_classification,\n",
-    "        record_metrics=False\n",
-    "    )\n",
-    "    # Compute the average and standard deviation of the scores\n",
-    "    average_score = np.mean(scores)\n",
-    "    std_deviation = np.std(scores)\n",
-    "\n",
+    "for dataset_name in [\"MackeyGlass\", \"Lorenz\", \"Sunspot\", \"CatsDogs\", \"FSDD\", \"JapaneseVowels\", \"SpokenArabicDigits\"]: \n",
+    "    new_results = pd.DataFrame(columns=columns)\n",
+    "    # Can be \"MackeyGlass\", \"Lorenz\", \"Sunspot\", \"CatsDogs\", \"FSDD\", \"JapaneseVowels\", \"SPEECHCOMMANDS\", \"SpokenArabicDigits\"\n",
+    "    pretrain_data, train_data, test_data, Y_train, Y_test, is_multivariate, is_instances_classification = load_data(dataset_name, data_type, noise_std, visualize=True)\n",
     "    if is_instances_classification:\n",
-    "        formatted_average = f\"{round(average_score * 100, 5)} %\"\n",
-    "        formatted_std = f\"± {round(std_deviation * 100, 5)} %\"\n",
+    "        file_name = \"outputs/test_results_classification.csv\"\n",
+    "    else: \n",
+    "        file_name = \"outputs/test_results_prediction.csv\"\n",
+    "    print(dataset_name)\n",
+    "    # Simulate your data and loop for evaluation\n",
+    "\n",
+    "    for function_name in [\"anti-oja\"]: # \"desp\", \"hadsp\", \"random\", \"random_ei\", \n",
+    "        print(function_name)\n",
+    "        study = retrieve_best_model(function_name, dataset_name, is_multivariate, variate_type = \"multi\", data_type = \"normal\")\n",
+    "    \n",
+    "        scores = evaluate_dataset_on_test(\n",
+    "            study, \n",
+    "            function_name, \n",
+    "            pretrain_data, \n",
+    "            train_data, \n",
+    "            test_data,\n",
+    "            Y_train, \n",
+    "            Y_test,\n",
+    "            is_instances_classification,\n",
+    "            record_metrics=False\n",
+    "        )\n",
+    "        # Compute the average and standard deviation of the scores\n",
+    "        average_score = np.mean(scores)\n",
+    "        std_deviation = np.std(scores)\n",
+    "    \n",
+    "        if is_instances_classification:\n",
+    "            formatted_average = f\"{round(average_score * 100, 5)} %\"\n",
+    "            formatted_std = f\"± {round(std_deviation * 100, 5)} %\"\n",
+    "        else:\n",
+    "            formatted_average = f\"{round(average_score, 5)}\"\n",
+    "            formatted_std = f\"± {round(std_deviation, 5)}\"\n",
+    "        \n",
+    "        # Capture the current date\n",
+    "        current_date = datetime.now().strftime('%Y-%m-%d')\n",
+    "        \n",
+    "        # Create a new DataFrame row with the Date column\n",
+    "        new_row = pd.DataFrame({\n",
+    "            'Dataset': [dataset_name],\n",
+    "            'Function': [function_name],\n",
+    "            'Average Score': [formatted_average],\n",
+    "            'Standard Deviation': [formatted_std],\n",
+    "            'Date': [current_date]\n",
+    "        })\n",
+    "        \n",
+    "        # Concatenate the new row to the results DataFrame\n",
+    "        new_results = pd.concat([new_results, new_row], ignore_index=True)\n",
+    "    \n",
+    "    \n",
+    "    # Display the DataFrame\n",
+    "    print(new_results)\n",
+    "    \n",
+    "    # Load the existing CSV\n",
+    "    if os.path.exists(file_name):\n",
+    "        previous_results = pd.read_csv(file_name)\n",
     "    else:\n",
-    "        formatted_average = f\"{round(average_score, 5)}\"\n",
-    "        formatted_std = f\"± {round(std_deviation, 5)}\"\n",
+    "        columns = ['Dataset', 'Function', 'Average Score', 'Standard Deviation', 'Date']\n",
+    "        previous_results = pd.DataFrame(columns=columns)\n",
+    "        previous_results.to_csv(file_name, index=False)\n",
+    "        print(f\"{file_name} created successfully.\")\n",
+    "        \n",
+    "    tots_results = pd.concat([new_results, previous_results], axis=0)\n",
     "    \n",
-    "    # Capture the current date\n",
-    "    current_date = datetime.now().strftime('%Y-%m-%d')\n",
-    "    \n",
-    "    # Create a new DataFrame row with the Date column\n",
-    "    new_row = pd.DataFrame({\n",
-    "        'Dataset': [dataset_name],\n",
-    "        'Function': [function_name],\n",
-    "        'Average Score': [formatted_average],\n",
-    "        'Standard Deviation': [formatted_std],\n",
-    "        'Date': [current_date]\n",
-    "    })\n",
-    "    \n",
-    "    # Concatenate the new row to the results DataFrame\n",
-    "    new_results = pd.concat([new_results, new_row], ignore_index=True)\n",
-    "\n",
-    "\n",
-    "# Display the DataFrame\n",
-    "print(new_results)\n",
-    "\n",
-    "# Load the existing CSV\n",
-    "if os.path.exists(file_name):\n",
-    "    previous_results = pd.read_csv(file_name)\n",
-    "else:\n",
-    "    columns = ['Dataset', 'Function', 'Average Score', 'Standard Deviation', 'Date']\n",
-    "    previous_results = pd.DataFrame(columns=columns)\n",
-    "    previous_results.to_csv(file_name, index=False)\n",
-    "    print(f\"{file_name} created successfully.\")\n",
-    "    \n",
-    "tots_results = pd.concat([new_results, previous_results], axis=0)\n",
-    "\n",
-    "tots_results.to_csv(file_name, index=False)\n",
-    "print(\"Results saved to 'pipeline_results.csv'.\")"
+    "    tots_results.to_csv(file_name, index=False)\n",
+    "    print(f\"Results saved to {file_name}.\")"
    ]
   },
   {
@@ -491,13 +489,33 @@
     "    print(f\"{file_name} created successfully.\")\n",
     "\n",
     "print(previous_results)\n",
-    "print(\"Results saved to 'pipeline_results.csv'.\")"
+    "print(f\"Results saved to {file_name}.\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "248705a2572644e3",
+   "id": "ccc1b83e-91a5-41b5-ad63-0c4a4284215b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d01dc3b5-115a-4fc6-a80b-ea1a1ff84952",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['Function'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a9cffa1d012ee29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,20 +529,26 @@
     "# Clean 'Average Score' and 'Standard Deviation' column (remove '±' and '%' and convert to float)\n",
     "df['Average Score'] = df['Average Score'].astype(str).str.replace('%', '').astype(float)\n",
     "df['Standard Deviation'] = df['Standard Deviation'].str.replace('±', '').str.replace('%', '').astype(float)\n",
+    "df = df[df['Function'] != 'ip']\n",
     "df['Function'] = df['Function'].str.replace('desp', 'variance HAG')\n",
     "df['Function'] = df['Function'].str.replace('hadsp', 'mean HAG')\n",
-    "df['Function'] = df['Function'].str.replace('random', 'E-ESN')\n",
     "df['Function'] = df['Function'].str.replace('random_ei', 'ESN')\n",
+    "df['Function'] = df['Function'].str.replace('random', 'E-ESN')\n",
+    "df['Function'] = df['Function'].str.replace('ip_correct', 'IP')\n",
+    "df['Function'] = df['Function'].str.replace('anti-oja', 'Anti-Oja')\n",
     "\n",
     "if file_name == \"test_results_classification.csv\":\n",
     "    df['Dataset'] = df['Dataset'].str.replace('SpokenArabicDigits', 'Spoken\\nArabic\\nDigits')\n",
     "    df['Dataset'] = df['Dataset'].str.replace('SPEECHCOMMANDS', 'SPEECH\\nCOMMANDS')\n",
     "    df['Dataset'] = df['Dataset'].str.replace('JapaneseVowels', 'Japanese\\nVowels')\n",
     "\n",
+    "# remove SPEECHCOMMANDS\n",
+    "df = df[df['Dataset'] != 'SPEECHCOMMANDS']\n",
+    "\n",
     "fig, ax = plt.subplots(figsize=(10, 6))\n",
     "functions = df['Function'].unique()\n",
     "x = np.arange(len(df['Dataset'].unique()))  # The label locations\n",
-    "width = 0.15  # Width of the bars\n",
+    "width = 0.06  # Width of the bars\n",
     "colors = color_palette(\"tab20\")\n",
     "\n",
     "for i, func in enumerate(functions):\n",
@@ -674,7 +698,7 @@
     "    \"JapaneseVowels\",\n",
     "    \"SpokenArabicDigits\",\n",
     "    \"FSDD\",\n",
-    "    \"SPEECHCOMMANDS\",\n",
+    "#    \"SPEECHCOMMANDS\",\n",
     "    \"MackeyGlass\",\n",
     "    \"Lorenz\",\n",
     "    \"Sunspot\",\n",
@@ -688,7 +712,7 @@
     "for dataset in datasets:\n",
     "    print(dataset)\n",
     "    pretrain_data, train_data, test_data, Y_train, Y_test, is_multivariate, is_instances_classification = load_data(dataset, data_type, noise_std)\n",
-    "    for function_name in [\"random\", \"random_ei\", \"ip\", \"hadsp\", \"desp\"]:\n",
+    "    for function_name in [\"random\", \"random_ei\", \"ip_correct\", \"hadsp\", \"desp\", \"anti-oja\"]:\n",
     "        # Get the best trial from the study\n",
     "        print(function_name)\n",
     "        study = retrieve_best_model(function_name, dataset, is_multivariate, variate_type = \"multi\", data_type = \"normal\")\n",
@@ -769,16 +793,17 @@
     "function_mapping = {\n",
     "    'random': 'E-ESN',\n",
     "    'random_ei': 'ESN',\n",
-    "    'ip': 'IP-ESN',\n",
-    "    'hadsp': 'Mean-HAG',       # Updated for consistency\n",
-    "    'desp': 'Variance-HAG'     # Updated for consistency\n",
+    "    'ip_correct': 'IP-ESN',\n",
+    "    'anti-oja': 'Anti-Oja',\n",
+    "    'hadsp': 'Mean-HAG',      \n",
+    "    'desp': 'Variance-HAG'  \n",
     "}\n",
     "\n",
     "# Apply the mapping to create a new column with descriptive labels\n",
     "data['Algorithm'] = data['function_name'].map(function_mapping)\n",
     "\n",
     "# Extract unique functions and datasets for plotting\n",
-    "functions = data['Algorithm'].unique()\n",
+    "functions = ['E-ESN', 'ESN', 'IP-ESN', 'Anti-Oja', 'Mean-HAG', 'Variance-HAG'] #data['Algorithm'].unique()\n",
     "datasets = data['dataset'].unique()\n",
     "\n",
     "# Prepare color palette for the bars\n",
@@ -836,6 +861,16 @@
     "    # Adjust layout for better fit\n",
     "    plt.tight_layout()\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc03ac93-c1dd-44d0-95b6-853188529400",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['Algorithm'].unique()"
    ]
   },
   {
